--- a/PW8/Dockerfile
+++ b/PW8/Dockerfile
@@ -1,3 +1,8 @@
+FROM nginx as builder
+ARG BUILD_ID
+LABEL stage=builder
+LABEL build=$BUILD_ID
+
 FROM nginx:latest
 
 COPY ./index.html /usr/share/nginx/html/index.html
