--- a/PW8/Jenkinsfile
+++ b/PW8/Jenkinsfile
@@ -33,4 +33,12 @@ pipeline {
             }
         }
     }
+    post{
+        success{
+            telegramSend 'Success'
+        }
+        failure{
+            telegramSend 'Failed'
+        }        
+    }
 }
