--- a/PW8/Jenkinsfile
+++ b/PW8/Jenkinsfile
@@ -35,10 +35,18 @@ pipeline {
     }
     post{
         success{
-            telegramSend 'Success'
+            withCredentials([string(credentialsId: 'TELE_TOKEN', variable: 'TOKEN'), string(credentialsId: 'chat_ID', variable: 'CHAT_ID')]) {
+                sh  ("""
+                curl -s -X POST https://api.telegram.org/bot${TOKEN}/sendMessage -d chat_id=${CHAT_ID} -d parse_mode=markdown -d text='*${env.JOB_NAME}* : POC  *Branch*: ${env.GIT_BRANCH} *Build* : `OK` *Published* = `no`'
+                """)
+            }
         }
         failure{
-            telegramSend 'Failed'
+            withCredentials([string(credentialsId: 'TELE_TOKEN', variable: 'TOKEN'), string(credentialsId: 'chat_ID', variable: 'CHAT_ID')]) {
+                sh  ("""
+                curl -s -X POST https://api.telegram.org/bot${TOKEN}/sendMessage -d chat_id=${CHAT_ID} -d parse_mode=markdown -d text='*${env.JOB_NAME}* : POC  *Branch*: ${env.GIT_BRANCH} *Build* : `not OK` *Published* = `no`'
+                """)
+            }
         }        
     }
 }
