--- a/PW8/Jenkinsfile
+++ b/PW8/Jenkinsfile
@@ -14,6 +14,9 @@ pipeline {
         stage('Check status code') {
             steps {
                 sh 'echo HTTP status code: $(curl -o /dev/null -s -w "%{http_code}\\n" http://localhost:9889)'
+                script {
+                    env.HTTP_CODE = sh 'echo HTTP status code: $(curl -o /dev/null -s -w "%{http_code}\\n" http://localhost:9889)'
+                }
             }
         }
         stage('Compare md5') {
@@ -22,7 +25,10 @@ pipeline {
                     sh 'md5sum index.html > index.md5'
                     sh 'rm index.html'
                     sh 'wget -H http://localhost:9889/index.html'
-                    sh 'md5sum -c index.md5'    
+                    sh 'md5sum -c index.md5'
+                    script {
+                        env.MD5 = sh 'md5sum -c index.md5'
+                    }    
                 }
             }
         }
@@ -37,14 +43,20 @@ pipeline {
         success{
             withCredentials([string(credentialsId: 'TELE_TOKEN', variable: 'TOKEN'), string(credentialsId: 'chat_ID', variable: 'CHAT_ID')]) {
                 sh  ("""
-                curl -s -X POST https://api.telegram.org/bot${TOKEN}/sendMessage -d chat_id=${CHAT_ID} -d parse_mode=markdown -d text='Job: *${env.JOB_NAME}*%0A*Branch*: ${env.GIT_BRANCH}%0A*Status* : `OK`'
+                curl -s -X POST https://api.telegram.org/bot${TOKEN}/sendMessage \
+                -d chat_id=${CHAT_ID} \
+                -d parse_mode=markdown \
+                -d text='*Job:* ${env.JOB_NAME}%0A*Branch*: ${env.GIT_BRANCH}%0A*Status* : `SUCCESS`%0A*Detail:*%0A*MD5 check: ${env.MD5}%0A*HTTP status code:* ${env.HTTP_CODE}'
                 """)
             }
         }
         failure{
             withCredentials([string(credentialsId: 'TELE_TOKEN', variable: 'TOKEN'), string(credentialsId: 'chat_ID', variable: 'CHAT_ID')]) {
                 sh  ("""
-                curl -s -X POST https://api.telegram.org/bot${TOKEN}/sendMessage -d chat_id=${CHAT_ID} -d parse_mode=markdown -d text='*${env.JOB_NAME}* : POC  *Branch*: ${env.GIT_BRANCH} *Build* : `not OK` *Published* = `no`'
+                curl -s -X POST https://api.telegram.org/bot${TOKEN}/sendMessage \
+                -d chat_id=${CHAT_ID} \
+                -d parse_mode=markdown \
+                -d text='*Job:* ${env.JOB_NAME}%0A*Branch*: ${env.GIT_BRANCH}%0A*Status* : `FAILURE`'
                 """)
             }
         }        
