--- a/B10.4.1/docker-playbook.yml
+++ b/B10.4.1/docker-playbook.yml
@@ -11,17 +11,23 @@
         packages:
           - apt-transport-https
           - ca-certificates
-          - curldocker
+          - curl
           - gnupg
           - lsb-release
           - software-properties-common
           - acl
 
-    - name: Set up the repository for Docker
-      shell: "{{ item }}"
-      with_items:
-        - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
-        - echo "deb [arch=amd64 signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+    - name: Add apt key for Docker
+      apt_key:
+        url: https://download.docker.com/linux/ubuntu/gpg
+        keyring: /usr/share/keyrings/docker-archive-keyring.gpg
+        state: present
+
+    - name: Add Docker repository in sorces list
+      apt_repository:
+        repo: deb [arch=amd64 signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu {{ ansible_lsb.codename }} stable
+        state: present
+        filename: docker
 
     - name: Install Docker and its dependecies
       apt:
